# node-fontinfo

./: CMakeLists.txt  README  appveyor.yml  azure-pipelines.yml  package-lock.json  package.json
.github/workflows/: build.yml
ci/: build-osx.sh  win-build.cmd
dependencies/: node_fontinfo.node.txt
src/: module.cpp
src/fontinfo/: fontinfo.c
test/: simple_test.c  simple_test.cpp
